--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			</dl>
 		</div>
 		<div class="btn-wrap">
-			<a href="#none" class="btn color01">학사 LGenius 선발</a>
-			<a href="#none" class="btn color02">석/박사 LGenius 선발</a>
+			<a href="#none" class="btn color01" data-modal="modal01">학사 LGenius 선발</a>
+			<a href="#none" class="btn color02" data-modal="modal02">석/박사 LGenius 선발</a>
 		</div>
 		
 		<div class="img n2"></div>
@@ -198,7 +198,7 @@
 			</section>
 			<section class="cont video" id="nav03">
 				<div class="cont-title">영상보기</div> 
-				<div class="video-wrap">
+				<!-- <div class="video-wrap">
 					<div class="video-item">
 						<div class="video-box">
 							<iframe width="100%" height="100%" src="https://www.youtube.com/embed/l9YV6T2xpxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -227,7 +227,7 @@
 						<div class="tit">LG디스플레이 학사 산학 장학생 채용! R&D</div>
 						<div class="txt">산학장학생 ‘Genius’ 모집이 시작되었습니다.</div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 			<section class="cont faq" id="nav04">
 				<div class="cont-title">자주하는 질문</div>
@@ -248,6 +248,36 @@
 				<a href="#" class="btn-application">지원하기</a>
 				<button type="button" class="btn-share">공유하기</button>
 			</div>
+		</div>
+	</div>
+
+	<div class="modal" id="modal01">
+		<div class="modal-header">
+			<h2>LGenius 학사 모집요강</h2>
+			<button type="button" class="btn-close"></button>
+		</div>
+		<div class="modal-cont">
+			<div class="scorll-wrap">
+				는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소는 세계 각지에 해외 사업장을 보유하고 있습니다. 우수한 외국어 역량과 현지에 대한 이해가 있으면, 해외 인원들과 소
+			</div>
+		</div>
+		<div class="btn-wrap">
+			<button type="button" class="btn color01">지원하기</button>
+		</div>
+	</div>
+
+	<div class="modal" id="modal02">
+		<div class="modal-header">
+			<h2>LGenius 석/박사 모집요강</h2>
+			<button type="button" class="btn-close"></button>
+		</div>
+		<div class="modal-cont">
+			<div class="scorll-wrap">
+				ㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  ㅇㄻㄴㅇㄹㄴㄹㄴㅇㄻㄴㄹㅇㄴㅇㄻㄴㅇㄹㄴㅇㄻㄴㅇㄹ  
+			</div>
+		</div>
+		<div class="btn-wrap">
+			<button type="button" class="btn color02">지원하기</button>
 		</div>
 	</div>
 </body>
