--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<dl>
 				<div class="info-box-item">
 					<dt>모집분야</dt>
-					<dd>&D (학/석/박), AI/Big Data(석/박), 안전/환경 (석/박) </dd>
+					<dd>R&D (학/석/박), AI/Big Data(석/박), 안전/환경 (석/박) </dd>
 				</div>
 				<div class="info-box-item">
 					<dt>모집기간</dt>
@@ -198,7 +198,7 @@
 			</section>
 			<section class="cont video" id="nav03">
 				<div class="cont-title">영상보기</div> 
-				<!-- <div class="video-wrap">
+				<div class="video-wrap">
 					<div class="video-item">
 						<div class="video-box">
 							<iframe width="100%" height="100%" src="https://www.youtube.com/embed/l9YV6T2xpxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -227,7 +227,7 @@
 						<div class="tit">LG디스플레이 학사 산학 장학생 채용! R&D</div>
 						<div class="txt">산학장학생 ‘Genius’ 모집이 시작되었습니다.</div>
 					</div>
-				</div> -->
+				</div>
 			</section>
 			<section class="cont faq" id="nav04">
 				<div class="cont-title">자주하는 질문</div>
