--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</div>
 				<div class="info-box-item">
 					<dt>모집기간</dt>
-					<dd>2022.09.05.(월)~09.25.(일) 23:00 </dd>
+					<dd>2022.09.05 (월) ~ 09.25 (일) 23:00</dd>
 				</div>
 				<div class="info-box-item">
 					<dt>지원방법</dt>
@@ -95,7 +95,7 @@
 				<div class="tab-wrap">
 					<div class="tab-menu" data-ui-tab="tab01">
 						<button type="button" class="tab-btn on">R&D</button>
-						<button type="button" class="tab-btn">AL/BIG DATA</button>
+						<button type="button" class="tab-btn">AI/Big Data</button>
 						<button type="button" class="tab-btn">안전/환경</button>
 					</div>
 					<div class="tab-conts" id="tab01">
