--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 			</dl>
 		</div>
 		<div class="btn-wrap">
-			<a href="#none" class="btn color01" data-modal="modal01">학사 LGenius 선발</a>
-			<a href="#none" class="btn color02" data-modal="modal02">석/박사 LGenius 선발</a>
+			<a href="#none" class="btn color01" data-modal="modal01"><span>학사 R&D LGenius (파주) 알아보기</span></a>
+			<a href="#none" class="btn color01" data-modal="modal01"><span>학사 R&D LGenius (구미) 알아보기 </span></a>
+			<a href="#none" class="btn color02" data-modal="modal02"><span>석/박사 LGenius 알아보기 </span> </a>
 		</div>
 		
 		<div class="img n2"></div>
@@ -246,7 +247,7 @@
 			</section>
 			<div class="btn-wrap">
 				<a href="#" class="btn-application">지원하기</a>
-				<button type="button" class="btn-share">공유하기</button>
+				<button type="button" class="btn-share"><span>공유하기</span></button>
 			</div>
 		</div>
 	</div>
